fix: add container z-index

--- a/src/style/menu.scss
+++ b/src/style/menu.scss
@@ -125,5 +125,6 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1000;
   }
 }
